Updated some HTML and font

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Nicholas Kim</h1>
-						<p>Backend Programmer &nbsp;&bull;&nbsp; Bboy &nbsp;&bull;&nbsp; Child of God</p>
+						<p>Backend Programmer &nbsp;&bull;&nbsp; University of Maryland &nbsp;&bull;&nbsp; Dog lover</p>
 						<nav>
 							<ul>
 								<li><a href="https://www.youtube.com/user/TheNickcharlie" target="_blank" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
