--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 								<li><a href="https://www.linkedin.com/in/nck898/" target="_blank" class="icon fa-linkedin-square"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://github.com/nck898" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:nck898@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-								<li><a href="Resume.pdf" target="_blank" class="icon fa-file-text"><span class="label">Resume</span></a></li>
+								<li><a href="Resume- CS (2).pdf" target="_blank" class="icon fa-file-text"><span class="label">Resume</span></a></li>
 							</ul>
 						</nav>
 					</header>
