Added soundcloud icon and link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Nicholas Kim</h1>
-						<p>Backend Programmer &nbsp;&bull;&nbsp; University of Maryland &nbsp;&bull;&nbsp; Dog lover</p>
+						<p>Backend Programmer &nbsp;&bull;&nbsp; University of Maryland CS&nbsp;&bull;&nbsp; Dog lover</p>
 						<nav>
 							<ul>
 								<li><a href="https://www.youtube.com/user/TheNickcharlie" target="_blank" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
@@ -23,6 +23,7 @@
 								<li><a href="https://github.com/nck898" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:nck898@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 								<li><a href="Resume- CS (2).pdf" target="_blank" class="icon fa-file-text"><span class="label">Resume</span></a></li>
+								<li><a href="https://soundcloud.com/nicholascharleskim" target="_blank" class="icon fa-soundcloud"><span class="label">Soundcloud</span></a></li>
 							</ul>
 						</nav>
 					</header>
